Overflow error fixed

--- a/chamber/styles/reset.css
+++ b/chamber/styles/reset.css
@@ -9,5 +9,4 @@ body {
   background-color: #ffffff;
   margin: 0;
   padding: 0;
-  overflow: none;
 }
